ola-parser/src/testdata/syntaxTests/nameAndTypeResolution/053_hash_collision_in_interface.sol
contract test {
    fn gsf() public { }
    fn tgeo() public { }
}
// ----
// TypeError 1860: (0-78): fn signature hash collision for tgeo()
